--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@tellescope/sdk",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "Code for interacting with the Tellescope API",
   "main": "./lib/cjs/sdk.js",
   "module": "./lib/esm/sdk.js",
   "types": "./lib/esm/sdk.d.ts",
   "scripts": {
     "test": "npm run-script build:cjs && npm run-script retest",
-    "retest": "npm run-script retest-sockets && npm run-script retest-api && npm run-script retest-public-api",
+    "retest": "npm run-script retest-api && npm run-script retest-public-api && npm run-script retest-sockets",
     "test-api": "npm run-script build:cjs && npm run-script retest-api",
     "retest-api": "node lib/cjs/tests/tests.js",
     "test-public-api": "npm run-script build:cjs && npm run-script retest-public-api",
@@ -30,14 +30,14 @@
   },
   "homepage": "https://github.com/tellescope-os/tellescope#readme",
   "dependencies": {
-    "@tellescope/constants": "^0.0.19",
-    "@tellescope/schema": "^0.0.19",
-    "@tellescope/testing": "^0.0.19",
-    "@tellescope/types-client": "^0.0.19",
-    "@tellescope/types-models": "^0.0.19",
-    "@tellescope/types-utilities": "^0.0.19",
-    "@tellescope/utilities": "^0.0.19",
-    "@tellescope/validation": "^0.0.19",
+    "@tellescope/constants": "^0.0.20",
+    "@tellescope/schema": "^0.0.20",
+    "@tellescope/testing": "^0.0.20",
+    "@tellescope/types-client": "^0.0.20",
+    "@tellescope/types-models": "^0.0.20",
+    "@tellescope/types-utilities": "^0.0.20",
+    "@tellescope/utilities": "^0.0.20",
+    "@tellescope/validation": "^0.0.20",
     "axios": "^0.21.1",
     "form-data": "^4.0.0",
     "socket.io-client": "^4.2.0",
