Published npm version update(s)

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,19 +1,21 @@
 {
   "name": "@tellescope/sdk",
-  "version": "0.0.20",
+  "version": "0.0.21",
   "description": "Code for interacting with the Tellescope API",
   "main": "./lib/cjs/sdk.js",
   "module": "./lib/esm/sdk.js",
   "types": "./lib/esm/sdk.d.ts",
   "scripts": {
     "test": "npm run-script build:cjs && npm run-script retest",
-    "retest": "npm run-script retest-api && npm run-script retest-public-api && npm run-script retest-sockets",
+    "retest": "npm run-script retest-api && npm run-script retest-public-api && npm run-script retest-webhooks && npm run-script retest-sockets",
     "test-api": "npm run-script build:cjs && npm run-script retest-api",
     "retest-api": "node lib/cjs/tests/tests.js",
     "test-public-api": "npm run-script build:cjs && npm run-script retest-public-api",
     "retest-public-api": "node lib/cjs/tests/public_endpoint_tests.js",
     "test-sockets": "npm run-script build:cjs && npm run-script retest-sockets",
     "retest-sockets": "node lib/cjs/tests/socket_tests.js",
+    "test-webhooks": "npm run-script build:cjs && npm run-script retest-webhooks",
+    "retest-webhooks": "node lib/cjs/tests/webhooks_tests.js",
     "build": "npm run-script build:esm && npm run-script build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
@@ -30,15 +32,16 @@
   },
   "homepage": "https://github.com/tellescope-os/tellescope#readme",
   "dependencies": {
-    "@tellescope/constants": "^0.0.20",
-    "@tellescope/schema": "^0.0.20",
-    "@tellescope/testing": "^0.0.20",
-    "@tellescope/types-client": "^0.0.20",
-    "@tellescope/types-models": "^0.0.20",
-    "@tellescope/types-utilities": "^0.0.20",
-    "@tellescope/utilities": "^0.0.20",
-    "@tellescope/validation": "^0.0.20",
+    "@tellescope/constants": "^0.0.21",
+    "@tellescope/schema": "^0.0.21",
+    "@tellescope/testing": "^0.0.21",
+    "@tellescope/types-client": "^0.0.21",
+    "@tellescope/types-models": "^0.0.21",
+    "@tellescope/types-utilities": "^0.0.21",
+    "@tellescope/utilities": "^0.0.21",
+    "@tellescope/validation": "^0.0.21",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "form-data": "^4.0.0",
     "socket.io-client": "^4.2.0",
     "source-map-support": "^0.5.20"
