Published npm version update(s)

--- a/packages/react/chat/tsconfig.json
+++ b/packages/react/chat/tsconfig.json
@@ -8,5 +8,11 @@
   "include": ["src"],
   "references": [
     { "path": "../components" },
+    { "path": "../../sdk" },
+    { "path": "../../utilities" },
+    { "path": "../../types-client" },
+    { "path": "../../types-models" },
+    { "path": "../../types-utilities" },
+    { "path": "../../constants" },
   ]
 }
