Published npm version update(s)

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tellescope/sdk",
-  "version": "0.0.29",
+  "version": "0.0.32",
   "description": "Code for interacting with the Tellescope API",
   "main": "./lib/cjs/sdk.js",
   "module": "./lib/esm/sdk.js",
@@ -9,13 +9,13 @@
     "test": "npm run-script build:cjs && npm run-script retest",
     "retest": "npm run-script retest-api && npm run-script retest-public-api && npm run-script retest-webhooks && npm run-script retest-sockets",
     "test-api": "npm run-script build:cjs && npm run-script retest-api",
-    "retest-api": "node lib/cjs/tests/tests.js",
+    "retest-api": "node -r dotenv/config lib/cjs/tests/tests.js",
     "test-public-api": "npm run-script build:cjs && npm run-script retest-public-api",
-    "retest-public-api": "node lib/cjs/tests/public_endpoint_tests.js",
+    "retest-public-api": "node -r dotenv/config lib/cjs/tests/public_endpoint_tests.js",
     "test-sockets": "npm run-script build:cjs && npm run-script retest-sockets",
-    "retest-sockets": "node lib/cjs/tests/socket_tests.js",
+    "retest-sockets": "node -r dotenv/config lib/cjs/tests/socket_tests.js",
     "test-webhooks": "npm run-script build:cjs && npm run-script retest-webhooks",
-    "retest-webhooks": "node lib/cjs/tests/webhooks_tests.js",
+    "retest-webhooks": "node -r dotenv/config lib/cjs/tests/webhooks_tests.js",
     "build": "npm run-script build:esm && npm run-script build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
@@ -32,15 +32,16 @@
   },
   "homepage": "https://github.com/tellescope-os/tellescope#readme",
   "dependencies": {
-    "@tellescope/constants": "^0.0.29",
-    "@tellescope/schema": "^0.0.29",
-    "@tellescope/testing": "^0.0.29",
-    "@tellescope/types-client": "^0.0.29",
-    "@tellescope/types-models": "^0.0.29",
-    "@tellescope/types-utilities": "^0.0.29",
-    "@tellescope/utilities": "^0.0.29",
-    "@tellescope/validation": "^0.0.29",
+    "@tellescope/constants": "^0.0.32",
+    "@tellescope/schema": "^0.0.32",
+    "@tellescope/testing": "^0.0.32",
+    "@tellescope/types-client": "^0.0.32",
+    "@tellescope/types-models": "^0.0.32",
+    "@tellescope/types-utilities": "^0.0.32",
+    "@tellescope/utilities": "^0.0.32",
+    "@tellescope/validation": "^0.0.32",
     "axios": "^0.21.1",
+    "dotenv": "^14.2.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "socket.io-client": "^4.2.0",
