--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tellescope/schema",
-  "version": "0.0.32",
+  "version": "0.0.34",
   "description": "Schema definition for Tellescope models",
   "main": "./lib/cjs/schema.js",
   "module": "./lib/esm/schema.js",
@@ -23,11 +23,12 @@
   },
   "homepage": "https://github.com/tellescope-os/tellescope#readme",
   "dependencies": {
-    "@tellescope/constants": "^0.0.32",
-    "@tellescope/types-models": "^0.0.32",
-    "@tellescope/types-server": "^0.0.32",
-    "@tellescope/types-utilities": "^0.0.32",
-    "@tellescope/validation": "^0.0.32",
+    "@tellescope/constants": "^0.0.34",
+    "@tellescope/types-client": "^0.0.34",
+    "@tellescope/types-models": "^0.0.34",
+    "@tellescope/types-server": "^0.0.34",
+    "@tellescope/types-utilities": "^0.0.34",
+    "@tellescope/validation": "^0.0.34",
     "validator": "^13.1.17"
   },
   "devDependencies": {
