Published npm version update(s)

--- a/packages/react/video-chat/package.json
+++ b/packages/react/video-chat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tellescope/video-chat",
-  "version": "0.0.88",
+  "version": "0.0.89",
   "description": "",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
@@ -33,13 +33,13 @@
     "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
-    "@tellescope/constants": "^0.0.88",
-    "@tellescope/react-components": "^0.0.88",
-    "@tellescope/sdk": "^0.0.88",
-    "@tellescope/types-client": "^0.0.88",
-    "@tellescope/types-models": "^0.0.88",
-    "@tellescope/types-utilities": "^0.0.88",
-    "@tellescope/utilities": "^0.0.88",
+    "@tellescope/constants": "^0.0.89",
+    "@tellescope/react-components": "^0.0.89",
+    "@tellescope/sdk": "^0.0.89",
+    "@tellescope/types-client": "^0.0.89",
+    "@tellescope/types-models": "^0.0.89",
+    "@tellescope/types-utilities": "^0.0.89",
+    "@tellescope/utilities": "^0.0.89",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "amazon-chime-sdk-component-library-react": "^2.12.0",
@@ -51,8 +51,8 @@
     "styled-system": "^5.1.5"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "gitHead": "8093dbf4015d6196a234e4922564ddce3df0a9a7",
   "publishConfig": {
