--- a/packages/types-server/tsconfig.json
+++ b/packages/types-server/tsconfig.json
@@ -6,4 +6,7 @@
   },
   "exclude": ["node_modules", "lib"],
   "include": ["src"],
+  "references": [
+    { "path": "../types-utilities" }
+  ] 
 }
