--- a/packages/types-server/package.json
+++ b/packages/types-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tellescope/types-server",
-  "version": "0.0.98",
+  "version": "1.0.0",
   "description": "Types for Tellescope models used in the server-side",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
@@ -23,14 +23,14 @@
   },
   "homepage": "https://github.com/tellescope-os/tellescope#readme",
   "devDependencies": {
-    "@tellescope/types-models": "^0.0.98",
+    "@tellescope/types-models": "^1.0.0",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "bson": "^4.5.3",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.1",
     "express": "^4.17.1",
+    "mongodb": "4.3.0",
     "nodemon": "^2.0.13",
     "typescript": "^4.4.3"
   },
